# hstatusbar

./: Makefile  README.md  default.nix  hstatusbar.cabal
src/: Main.hs
src/HStatusBar/: Alsa.hs  Battery.hs  Bspwm.hs  CPU.hs  Common.hs  Decl.hs  Disk.hs  Memory.hs  ModuleParser.hs  Time.hs  Types.hs  Xtitle.hs
