name:                hstatusbar
version:             0.1.0
homepage:            https://github.com/michalrus/hstatusbar
license:             Apache-2.0
license-file:        LICENSE
author:              Michal Rus
maintainer:          m@michalrus.com
copyright:           2017 Michal Rus
-- category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable hstatusbar
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -fwarn-incomplete-uni-patterns -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  ScopedTypeVariables
                     , OverloadedStrings
                     , LambdaCase
  build-depends:       base-noprelude
                     , prelude
                     , containers
                     , text
                     , megaparsec
                     , monad-loops
                     , time
                     , process
                     , statvfs
                     , regex-pcre
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/michalrus/hstatusbar
